allow users to create their own boards fix video css on mobile

--- a/src/web/static/common.css
+++ b/src/web/static/common.css
@@ -397,4 +397,7 @@ body {
 	.zoom-check:checked ~ label > .media {
 		max-width: 100%;
 	}
+	.zoom-check:checked ~ label > .media-video video {
+		max-width: 100%;
+	}
 }
